--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "private": true,
   "scripts": {
     "build": "bun build src/index.ts --outdir=dist --minify --target=bun",
-    "start": "bun run build --target=bun && bun run dist/index.js | pino-pretty",
+    "start": "ls && bun run dist/index.js | pino-pretty",
     "dev": "nodemon --watch src --ext ts --exec bun run /src/index.ts | pino-pretty",
     "test": "bun test",
     "lint": "bun run lint"
